<resources>
    <string name="app_name">W01_Mission</string>
    <string name="title">오늘 하루는 어땠나요?</string>
    <string name="subtitle">감정 우표를 선택해주세요</string>
    <string name="description">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="face1_description">더없이 행복한 하루였어요</string>
    <string name="face2_description">들뜨고 흥분돼요</string>
    <string name="face3_description">평범한 하루였어요</string>
    <string name="face4_description">생각이 많아지고 불안해요</string>
    <string name="face5_description">부글부글 화가 나요</string>
    <string name="subActivity_text">일기를 작성하세요</string>
</resources>