<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <!-- 뒤로가기 버튼 이미지 뷰 -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <!-- 선형 레이아웃 -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <!-- 제목 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="22sp" />

        <!-- 부제목 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="16sp"
            android:layout_marginTop="6dp" />

        <!-- 설명 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_Describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="12sp"
            android:layout_marginTop="22dp" />

        <!-- 첫 번째 표정 이미지 뷰 -->
        <ImageView
            android:id="@+id/ImageView_face1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/face_1"
            android:contentDescription="@null"
            android:layout_marginTop="34dp" />

        <!-- 첫 번째 표정 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_face1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face1_description"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>

        <!-- 두 번째 표정 이미지 뷰 -->
        <ImageView
            android:id="@+id/ImageView_face2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/face_2"
            android:contentDescription="@null"
            android:layout_marginTop="20dp" />

        <!-- 두 번째 표정 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_face2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face2_description"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>


        <!-- 세 번째 표정 이미지 뷰 -->
        <ImageView
            android:id="@+id/ImageView_face3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/face_3"
            android:contentDescription="@null"
            android:layout_marginTop="20dp" />

        <!-- 세 번째 표정 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_face3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face3_description"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>

        <!-- 네 번째 표정 이미지 뷰 -->
        <ImageView
            android:id="@+id/ImageView_face4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/face_4"
            android:contentDescription="@null"
            android:layout_marginTop="20dp" />

        <!-- 네 번째 표정 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_face4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face4_description"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>

        <!-- 다섯 번째 표정 이미지 뷰 -->
        <ImageView
            android:id="@+id/ImageView_face5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/face_5"
            android:contentDescription="@null"
            android:layout_marginTop="20dp" />

        <!-- 다섯 번째 표정 텍스트 뷰 -->
        <TextView
            android:id="@+id/TextView_face5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face5_description"
            android:textSize="14sp"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
